@@ -1,3 +1,8 @@
+8/8/2006 - jdiamond
+====================
+
+ * (trac #103) Added code to include setup fee's in the Paypal cart upload
+
 8/5/2006 - jdiamond
 ====================
 
